@@ -15,6 +15,7 @@ Features
    html.InsertEntity and subversion.RevisionSelector
  - Git and subversion status on files are shown as colors in the project view
  - File encoding changed to utf-8
+ - TextMate.system javascript support in HTML output for command bundle items
 
 Bugfixes
  - NPE whith new tabs created by bundles
